PROD-12-18-19/force-app/main/default/objects/SmartWidget__c/SmartWidget__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SmartWidget</label>
</CustomObject>