PROD-12-18-19/force-app/main/default/objects/SmartWidget__c/fields/AutoComplete_Child_Object_List_Field_RTF__c.field-meta.xml
<CustomField>
    <fullName>AutoComplete_Child_Object_List_Field_RTF__c</fullName>
    <label>AutoComplete Child Object List Field RTF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>