PROD-12-18-19/force-app/main/default/objects/SmartWidget__c/fields/AutoComplete_Related_Field__c.field-meta.xml
<CustomField>
    <fullName>AutoComplete_Related_Field__c</fullName>
    <label>AutoComplete Related Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>