PROD-12-18-19/force-app/main/default/objects/SmartWidget__c/fields/AutoComplete_Search_Fields__c.field-meta.xml
<CustomField>
    <fullName>AutoComplete_Search_Fields__c</fullName>
    <label>AutoComplete Search Fields</label>
    <type>TextArea</type>
</CustomField>