PROD-12-18-19/force-app/main/default/objects/SmartWidget__c/fields/AutoComplete_Search_Min_Length__c.field-meta.xml
<CustomField>
    <fullName>AutoComplete_Search_Min_Length__c</fullName>
    <label>AutoComplete Search Min Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>