PROD-12-18-19/force-app/main/default/objects/SmartWidget__c/fields/AutoComplete_Search_Object__c.field-meta.xml
<CustomField>
    <fullName>AutoComplete_Search_Object__c</fullName>
    <label>AutoComplete Search Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>