PROD-12-18-19/force-app/main/default/objects/SmartWidget__c/fields/AutoComplete_Target_Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>AutoComplete_Target_Parent_Field__c</fullName>
    <label>AutoComplete Target Parent Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>