PROD-12-18-19/force-app/main/default/objects/SmartWidget__c/fields/Checkbox_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Checkbox_Reverse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox Reverse</label>
    <type>Checkbox</type>
</CustomField>