PROD-12-18-19/force-app/main/default/objects/SmartWidget__c/fields/Controlling_Widget__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Widget__c</fullName>
    <label>Controlling Widget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>