PROD-12-18-19/force-app/main/default/objects/SmartWidget__c/fields/Default_New_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_New_Record_Type_Id__c</fullName>
    <description>Record Type default for &quot;New [sObject]&quot; in widgets</description>
    <label>Default New Record Type Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>