PROD-12-18-19/force-app/main/default/objects/SmartWidget__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <inlineHelpText>In Pixels</inlineHelpText>
    <label>Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>