PROD-12-18-19/force-app/main/default/objects/SmartWidget__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description>Display help text for the field</description>
    <label>Help Text</label>
    <type>TextArea</type>
</CustomField>