PROD-12-18-19/force-app/main/default/objects/SmartWidget__c/fields/Reference_Object__c.field-meta.xml
<CustomField>
    <fullName>Reference_Object__c</fullName>
    <description>The name of the object that the Pick-list object is referencing (For filtering)</description>
    <label>Reference Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>