PROD-12-18-19/force-app/main/default/objects/SmartWidget__c/fields/Rows__c.field-meta.xml
<CustomField>
    <fullName>Rows__c</fullName>
    <inlineHelpText>The number of rows to display on a text area type widget. Must be a whole number between 1 and 999. This value has no impact on other types of widgets.</inlineHelpText>
    <label>Rows</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>