PROD-12-18-19/force-app/main/default/objects/SmartWidget__c/fields/Show_Operator__c.field-meta.xml
<CustomField>
    <fullName>Show_Operator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Operator</label>
    <type>Checkbox</type>
</CustomField>