PROD-12-18-19/force-app/main/default/objects/SmartWidget__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <inlineHelpText>In Pixels</inlineHelpText>
    <label>Width</label>
    <length>255</length>
    <type>Text</type>
</CustomField>