PROD-12-18-19/force-app/main/default/objects/SmartWidget__c/listViews/All_SmartWidgets.listView-meta.xml
<ListView>
    <fullName>All_SmartWidgets</fullName>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>Type__c</columns>
    <columns>Object__c</columns>
    <columns>Field__c</columns>
    <columns>Filter__c</columns>
    <columns>Show_Operator__c</columns>
    <columns>Default_Value__c</columns>
    <columns>Controlling_Widget__c</columns>
    <columns>AutoComplete_Search_Filter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All SmartWidgets</label>
</ListView>